[project]
name = "api-gateway"
version = "0.1.0"
description = "BFF / API Gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "grpcio>=1.60.0",
    "shared",
]

[project.scripts]
api-gateway = "api_gateway.cli:run"

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_gateway"]