[project]
name = "review-worker"
version = "0.1.0"
description = "Review Worker Service"
requires-python = ">=3.12"
dependencies = [
    "gidgethub>=5.4.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "shared",
]

[project.scripts]
review-worker = "review_worker.cli:run"

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["review_worker"]
